2015/submissions/rl23/fib/error.log
In file included from /home/ubuntu/toi/2015/_questions/fib/main.cpp:4:0:
/home/ubuntu/toi/2015/submissions/rl23/fib/submission.h:13:6: warning: ISO C++ forbids declaration of ‘main’ with no type [-Wreturn-type]
 main()
      ^
/home/ubuntu/toi/2015/_questions/fib/main.cpp: In function ‘int main(int, char**)’:
/home/ubuntu/toi/2015/_questions/fib/main.cpp:6:30: error: declaration of C function ‘int main(int, char**)’ conflicts with
 int main(int arc, char **argv){
                              ^
In file included from /home/ubuntu/toi/2015/_questions/fib/main.cpp:4:0:
/home/ubuntu/toi/2015/submissions/rl23/fib/submission.h:13:1: error: previous declaration ‘int main()’ here
 main()
 ^
